# agent-memory-control-plane

./: .gitignore  Cargo.toml  HLD-AMCP-COLLECTOR-CONTROLLER-AND-AGENT.md  IMPLEMENTATION-STATUS.md  INITIAL-BRIEF-AND-SPEC.md  PLAN-IMPLEMENTACJI.md  PRODUCTION-ACCEPTANCE.md  README.md
.github/workflows/: publish-agent-release.yml  shared-crates.yml
apps/amcp-desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/amcp-desktop/src/: main.tsx  styles.css
apps/amcp-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/amcp-desktop/src-tauri/capabilities/: default.json
apps/amcp-desktop/src-tauri/icons/: icon.icns
apps/amcp-desktop/src-tauri/src/: main.rs
crates/amcp-agent/: Cargo.toml
crates/amcp-agent/src/: main.rs
crates/amcp-app-server/: Cargo.toml
crates/amcp-app-server/src/: lib.rs
crates/amcp-codex/: Cargo.toml
crates/amcp-codex/src/: lib.rs
crates/amcp-controller/: Cargo.toml
crates/amcp-controller/src/: main.rs
crates/amcp-core/: Cargo.toml
crates/amcp-core/src/: lib.rs
crates/amcp-domain/: Cargo.toml
crates/amcp-domain/src/: lib.rs
crates/amcp-file-providers/: Cargo.toml
crates/amcp-file-providers/src/: lib.rs
crates/amcp-mcp/: Cargo.toml
crates/amcp-mcp/src/: main.rs
crates/amcp-platform/: Cargo.toml
crates/amcp-platform/src/: lib.rs
crates/amcp-protocol/: Cargo.toml
crates/amcp-protocol/src/: lib.rs
crates/amcp-provider-api/: Cargo.toml
crates/amcp-provider-api/src/: lib.rs
crates/amcp-rag/: Cargo.toml
crates/amcp-rag/src/: lib.rs
crates/amcp-storage/: Cargo.toml
crates/amcp-storage/src/: lib.rs
fixtures/: fake-codex-app-server.cmd  fake-codex-app-server.py
fixtures/antigravity/.gemini/antigravity-cli/: settings.json
fixtures/antigravity/.gemini/antigravity/knowledge/: team.md
fixtures/antigravity/project/.agents/plugins/review/rules/: review.md
fixtures/claude-code/.claude/: CLAUDE.md  settings.json
fixtures/claude-code/project/: CLAUDE.local.md  CLAUDE.md
fixtures/claude-code/project/.claude/: settings.json
fixtures/claude-code/project/.claude/commands/: review.md
fixtures/codex/: AGENTS.md  AGENTS.override.md  config.toml  history.jsonl  projects.toml  session_index.jsonl
fixtures/codex/memories/: fixture-memory.md
fixtures/codex/projects/alpha/: AGENTS.md
fixtures/codex/sessions/: fixture-session-1.jsonl
fixtures/kiro/.kiro/settings/: cli.json
fixtures/kiro/.kiro/steering/: product.md
fixtures/kiro/project/.kiro/steering/: tech.md
fixtures/rag/: retrieval-evaluation.json
packaging/macos/: com.gohyperdev.amcp.agent.plist.template  com.gohyperdev.amcp.remote-agent.plist.template
scripts/: acceptance-agent-release-package.sh  acceptance-desktop-bundle.sh  acceptance-multi-host-tls.sh  acceptance-multi-provider-collection.sh  acceptance-recovery.sh  acceptance-safe-change.sh  acceptance-sensitive-read-audit.sh  acceptance-shared-search.sh  build-desktop-sidecars.sh  configure-macos-remote-agent.sh  diagnose-agent.sh  install-agent-macos-release.sh  install-launch-agent.sh  install-systemd-user-service.sh  install-windows-agent-task.ps1  package-agent-macos-tools.sh  package-agent-release.sh  release-macos.sh  uninstall-launch-agent.sh  uninstall-systemd-user-service.sh  uninstall-windows-agent-task.ps1
