[workspace]
resolver = "2"
members = [
    "crates/amcp-domain",
    "crates/amcp-protocol",
    "crates/amcp-codex",
    "crates/amcp-storage",
    "crates/amcp-agent",
    "crates/amcp-controller",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["HyperDev"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = "0.4"
regex = "1.11"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "io-util", "fs", "process", "signal", "sync", "time"] }
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"
