[workspace]
resolver = "2"
members = [
    "crates/amcp-domain",
    "crates/amcp-core",
    "crates/amcp-platform",
    "crates/amcp-provider-api",
    "crates/amcp-file-providers",
    "crates/amcp-app-server",
    "crates/amcp-rag",
    "crates/amcp-mcp",
    "crates/amcp-protocol",
    "crates/amcp-codex",
    "crates/amcp-storage",
    "crates/amcp-agent",
    "crates/amcp-controller",
]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
authors = ["HyperDev"]

[workspace.dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hmac = "0.12"
hex = "0.4"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
notify = "8.2.0"
rustls = "0.23"
rustls-pemfile = "2.2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
toml = "0.8"
thiserror = "2.0"
tokio = { version = "1.48", features = ["macros", "rt-multi-thread", "net", "io-util", "io-std", "fs", "process", "signal", "sync", "time"] }
tokio-rustls = "0.26"
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5"
