[package]
name = "amcp-codex"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amcp-domain = { path = "../amcp-domain" }
amcp-provider-api = { path = "../amcp-provider-api" }
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
regex.workspace = true
sha2.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3.23"
