[package]
name = "amcp-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amcp-domain = { path = "../amcp-domain" }
amcp-protocol = { path = "../amcp-protocol" }
amcp-storage = { path = "../amcp-storage" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
