[package]
name = "amcp-controller"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amcp-core = { path = "../amcp-core" }
amcp-domain = { path = "../amcp-domain" }
amcp-platform = { path = "../amcp-platform" }
amcp-protocol = { path = "../amcp-protocol" }
amcp-storage = { path = "../amcp-storage" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-rustls.workspace = true
