[package]
name = "amcp-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
amcp-core = { path = "../amcp-core" }
amcp-platform = { path = "../amcp-platform" }
amcp-domain = { path = "../amcp-domain" }
amcp-storage = { path = "../amcp-storage" }
amcp-rag = { path = "../amcp-rag" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
