[package]
name = "amcp-desktop"
version = "0.1.0"
description = "AMCP desktop controller"
authors = ["HyperDev"]
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
amcp-domain = { path = "../../../crates/amcp-domain" }
amcp-storage = { path = "../../../crates/amcp-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5", features = [] }
