[package]
name = "amcp-desktop"
version = "0.1.0"
description = "AMCP desktop controller"
authors = ["HyperDev"]
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
anyhow = "1"
chrono = "0.4"
amcp-domain = { path = "../../../crates/amcp-domain" }
amcp-codex = { path = "../../../crates/amcp-codex" }
amcp-app-server = { path = "../../../crates/amcp-app-server" }
amcp-core = { path = "../../../crates/amcp-core" }
amcp-rag = { path = "../../../crates/amcp-rag" }
amcp-storage = { path = "../../../crates/amcp-storage" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5", features = [] }
tokio = { version = "1.48", features = ["time"] }

[dev-dependencies]
tempfile = "3.23"
